enable ful streaming via gRPC
